Lower: implemented ImageRepositoryTest and some changes.